# dashbord_Ohotani

./: Ohtani_game.ipynb  create_env.yml  pyproject.toml  requirements.txt
data/: homerun_king.csv  trackmandata_columns_explanation.csv
src/dashbord_ohotani/: __init__.py
