[project]
name = "dashbord-ohotani"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki-etu", email = "yuki.abcba369@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "dash>=2.17.1",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.22.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dashbord_ohotani"]
